--- a/dist.ini
+++ b/dist.ini
@@ -13,6 +13,7 @@ copyright_year      = 2011
 [CriticTests]
 [EOLTests]
 [KwaliteeTests]
+[MojibakeTests]
 [NoTabsTests]
 [PodCoverageTests]
 [PodSyntaxTests]
