Added 'cep2city' utility.

--- a/dist.ini
+++ b/dist.ini
@@ -9,14 +9,9 @@ copyright_year      = 2011
 
 [=inc::GenerateIndex]
 
-[CompileTests]
-[CriticTests]
-[EOLTests]
-[KwaliteeTests]
+[@TestingMania]
 [MojibakeTests]
-[NoTabsTests]
-[PodCoverageTests]
-[PodSyntaxTests]
+
 [PodWeaver]
 [VersionFromModule]
 
@@ -31,11 +26,21 @@ type                = pod
 [CopyFilesFromBuild]
 move                = README.pod
 
+[MinimumPerl]
+perl                = 5.008
+
 [Prereqs]
 common::sense       = 0
 File::ShareDir      = 0
 Moose               = 0
+Pod::Usage          = 0
 Text::CSV           = 0
 
 [PruneFiles]
 match               = ^lib/auto/
+
+[MetaResources]
+bugtracker.web      = http://github.com/creaktive/Geo-CEP/issues
+repository.web      = http://github.com/creaktive/Geo-CEP
+repository.url      = git://github.com/creaktive/Geo-CEP.git
+repository.type     = git
