Dist::Zilla stuff

--- a/dist.ini
+++ b/dist.ini
@@ -4,32 +4,38 @@ license             = Perl_5
 copyright_holder    = Stanislaw Pusep
 copyright_year      = 2011
 
-[@Basic]
-[@Git]
-
 [=inc::GenerateIndex]
 
+[@Basic]
+[@GitHub]
+
+[Git::NextVersion]
+first_version       = 0.1
+
+[GitFmtChanges]
+file_name           = Changes
+log_format          = %x20* %s
+
+[OurPkgVersion]
+
 [@TestingMania]
-[MojibakeTests]
 
 [PodWeaver]
-[VersionFromModule]
+;[VersionFromModule]
 
-[ReadmeAnyFromPod / text.build ]
+[ReadmeAnyFromPod / text.build]
 filename            = README
 type                = text
 
-[ReadmeAnyFromPod / pod.root ]
+[ReadmeAnyFromPod / pod.root]
 filename            = README.pod
 type                = pod
 
 [CopyFilesFromBuild]
 move                = README.pod
 
-[MinimumPerl]
-perl                = 5.008
-
 [Prereqs]
+perl                = 5.008
 common::sense       = 0
 File::ShareDir      = 0
 Moose               = 0
@@ -38,9 +44,3 @@ Text::CSV           = 0
 
 [PruneFiles]
 match               = ^lib/auto/
-
-[MetaResources]
-bugtracker.web      = http://github.com/creaktive/Geo-CEP/issues
-repository.web      = http://github.com/creaktive/Geo-CEP
-repository.url      = git://github.com/creaktive/Geo-CEP.git
-repository.type     = git
