Dist::Zilla stuff[2]

--- a/dist.ini
+++ b/dist.ini
@@ -6,22 +6,24 @@ copyright_year      = 2011
 
 [=inc::GenerateIndex]
 
+[@Git]
 [@Basic]
-[@GitHub]
 
 [Git::NextVersion]
 first_version       = 0.1
 
-[GitFmtChanges]
-file_name           = Changes
-log_format          = %x20* %s
+[NextRelease]
+format              = %-9v %{yyyy-MM-dd}d
 
 [OurPkgVersion]
+
+[MetaResourcesFromGit]
+homepage            = https://github.com/%a/%r
+bugtracker.web      = https://github.com/%a/%r/issues
 
 [@TestingMania]
 
 [PodWeaver]
-;[VersionFromModule]
 
 [ReadmeAnyFromPod / text.build]
 filename            = README
