--- a/dist.ini
+++ b/dist.ini
@@ -36,13 +36,8 @@ type                = pod
 [CopyFilesFromBuild]
 move                = README.pod
 
-[Prereqs]
-perl                = 5.008
-common::sense       = 0
-File::ShareDir      = 0
-Moose               = 0
-Pod::Usage          = 0
-Text::CSV           = 0
+[AutoPrereqs]
+[MinimumPerl]
 
 [PruneFiles]
 match               = ^lib/auto/
