--- a/dist.ini
+++ b/dist.ini
@@ -2,7 +2,11 @@ name                = Geo-CEP
 author              = Stanislaw Pusep <stas@sysd.org>
 license             = Perl_5
 copyright_holder    = Stanislaw Pusep
-copyright_year      = 2011
+copyright_year      = 2013
+
+; authordep Perl::Critic::Policy::Modules::ProhibitModuleShebang
+; authordep Pod::Elemental::Transformer::List
+; authordep Pod::Weaver::Plugin::Encoding
 
 [=inc::GenerateIndex]
 
@@ -12,8 +16,8 @@ copyright_year      = 2011
 [Git::NextVersion]
 first_version       = 0.1
 
-[NextRelease]
-format              = %-9v %{yyyy-MM-dd}d
+[ChangelogFromGit::CPAN::Changes]
+file_name           = Changes
 
 [OurPkgVersion]
 
@@ -22,6 +26,7 @@ homepage            = https://github.com/%a/%r
 bugtracker.web      = https://github.com/%a/%r/issues
 
 [@TestingMania]
+critic_config       = perlcritic.rc
 
 [PodWeaver]
 
@@ -37,7 +42,10 @@ type                = pod
 move                = README.pod
 
 [AutoPrereqs]
+
 [MinimumPerl]
 
 [PruneFiles]
 match               = ^lib/auto/
+
+[ManifestSkip]
