ensure it works on Perl down to v5.8

--- a/dist.ini
+++ b/dist.ini
@@ -44,6 +44,7 @@ move                = README.pod
 [AutoPrereqs]
 
 [MinimumPerl]
+perl                = 5.008
 
 [PruneFiles]
 match               = ^lib/auto/
