more specific prereqs

--- a/dist.ini
+++ b/dist.ini
@@ -43,6 +43,13 @@ move                = README.pod
 
 [AutoPrereqs]
 
+[Prereqs]
+Moo                 = 1.000007
+MooX::Types::MooseLike = 0.16
+
+[Prereqs / RuntimeRecommends]
+Text::CSV_XS        = 0
+
 [MinimumPerl]
 perl                = 5.008
 
