refactored for memoization

--- a/dist.ini
+++ b/dist.ini
@@ -55,5 +55,7 @@ perl                = 5.008
 
 [PruneFiles]
 match               = ^lib/auto/
+match               = ^cep2city\.pl$
+match               = ^CEP\.pm$
 
 [ManifestSkip]
