Dist::Zilla maintenance

--- a/dist.ini
+++ b/dist.ini
@@ -2,7 +2,7 @@ name                = Geo-CEP
 author              = Stanislaw Pusep <stas@sysd.org>
 license             = Perl_5
 copyright_holder    = Stanislaw Pusep
-copyright_year      = 2013
+copyright_year      = 2014
 
 ; authordep Perl::Critic::Policy::Modules::ProhibitModuleShebang
 ; authordep Pod::Elemental::Transformer::List
@@ -17,6 +17,9 @@ first_version       = 0.1
 
 [ChangelogFromGit::CPAN::Changes]
 file_name           = Changes
+copy_to_root        = 0
+
+[ContributorsFromGit]
 
 [OurPkgVersion]
 
@@ -56,5 +59,8 @@ perl                = 5.008
 match               = ^lib/auto/
 match               = ^cep2city\.pl$
 match               = ^CEP\.pm$
+
+[PrereqsClean]
+[Signature]
 
 [ManifestSkip]
